css, html and js added
snow animation added

--- a/BURCU-WEB/BURCU-WEB/BURCU-WEB/index.html
+++ b/BURCU-WEB/BURCU-WEB/BURCU-WEB/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <title> Burcu Akbalık</title>
+    <link href="Assets/less/common.min.css" rel="stylesheet" />
 </head>
 <body>
-
-<h1>Hello from my website</h1>
-
-<p>Today I am so happy :)</p>
-
+    <div class="shell">
+        <canvas id="canvas"></canvas>
+    </div>
+    <script src="Assets/js/snow.js"></script>
+    <script src="node_modules/jquery/src/effects/animatedSelector.js"></script>
 </body>
 </html>
