--- a/BURCU-WEB/BURCU-WEB/BURCU-WEB/index.html
+++ b/BURCU-WEB/BURCU-WEB/BURCU-WEB/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Burcu Akbalık</title>
+    <title> Burcu Akbalık</title>
     <link href="Assets/less/common.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700,300&amp;subset=latin-ext" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <canvas id="canvas"></canvas>
+    <nav class="bg-nav">
+        <div class="container ">
+            <div class="navbar">
+                <a href="index.html" class="ozluy-logo">
+                    <div class="burcu-name"><h1>BURCU AKBALIK</h1><h2 style="font-weight:300; ">Front-end Developer</h2></div>
+                    <div class="ozluy-zluy"><img style="width: 32px" src="Assets/img/favicon.png" /></div>
+                </a>
+
+                <ul class="navbar-links">
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="skills.html">Skills</a></li>
+                    <li><a href="references.html">References</a></li>
+                    <li><a href="articles.html">Articles</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
     <div class="shell">
-        <canvas id="canvas"></canvas>
+        <div class="container">
+
+        </div>
     </div>
     <script src="Assets/js/snow.js"></script>
-    <script src="node_modules/jquery/src/effects/animatedSelector.js"></script>
 </body>
 </html>
