--- a/BURCU-WEB/BURCU-WEB/BURCU-WEB/index.html
+++ b/BURCU-WEB/BURCU-WEB/BURCU-WEB/index.html
@@ -4,6 +4,8 @@
     <title> Burcu Akbalık</title>
     <link href="Assets/less/common.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700,300&amp;subset=latin-ext" rel="stylesheet" type="text/css">
+    <link href="Assets/less/component.min.css" rel="stylesheet" />
+    <link href="Assets/less/normalize.min.css" rel="stylesheet" />
 </head>
 <body>
     <canvas id="canvas"></canvas>
@@ -11,11 +13,11 @@
         <div class="container ">
             <div class="navbar">
                 <a href="index.html" class="ozluy-logo">
-                    <div class="burcu-name"><h1>BURCU AKBALIK</h1><h2 style="font-weight:300; ">Front-end Developer</h2></div>
+                    <div class="burcu-name"><h1 style="font-family:cursive">BURCU AKBALIK</h1><h2 style="font-weight:300; ">Front-end Developer</h2></div>
                     <div class="ozluy-zluy"><img style="width: 32px" src="Assets/img/favicon.png" /></div>
                 </a>
 
-                <ul class="navbar-links">
+                <ul class="navbar-links cl-effect-1" style="width: 600px;">
                     <li><a href="about.html">About</a></li>
                     <li><a href="skills.html">Skills</a></li>
                     <li><a href="references.html">References</a></li>
@@ -31,6 +33,7 @@
 
         </div>
     </div>
+    <script src="Assets/js/modernizr.custom.js"></script>
     <script src="Assets/js/snow.js"></script>
 </body>
 </html>
